force-app/main/default/objects/Despesa__c/Despesa__c.object-meta.xml
<CustomObject>
    <label>Despesa</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Despesas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>