force-app/main/default/objects/Despesa__c/fields/Chave_despesa__c.field-meta.xml
<CustomField>
    <fullName>Chave_despesa__c</fullName>
    <formula>TEXT(Valor__c) &amp; &quot;|&quot; &amp; 
Motivo__c &amp; &quot;|&quot; &amp; 
Descricao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chave despesa</label>
    <type>Text</type>
</CustomField>