force-app/main/default/objects/Despesa__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admistrativo</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Locacao</fullName>
                <label>Locação</label>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Serviços</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>