force-app/main/default/objects/Despesa__c/fields/Linha_da_Despesa__c.field-meta.xml
<CustomField>
    <fullName>Linha_da_Despesa__c</fullName>
    <inlineHelpText>Utilizado para controle da verba</inlineHelpText>
    <label>Linha da Despesa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENDOSCOPIA FLEXÍVEL SONOSCAPE</fullName>
            </value>
            <value>
                <fullName>SURGICAL SUPORTE CIRURGICO</fullName>
            </value>
            <value>
                <fullName>SURGICAL-CMI</fullName>
            </value>
            <value>
                <fullName>SURGICAL-ELETROCIRURGIA</fullName>
            </value>
            <value>
                <fullName>PMLS</fullName>
            </value>
            <value>
                <fullName>PM-MEDTRONIC</fullName>
            </value>
            <value>
                <fullName>VIAS AEREAS DIFICEIS</fullName>
            </value>
            <value>
                <fullName>ORTOPEDIA ZIMMER</fullName>
            </value>
            <value>
                <fullName>ORTOPEDIA BAUMER</fullName>
            </value>
            <value>
                <fullName>ORTOPEDIA MINDRAY</fullName>
            </value>
            <value>
                <fullName>OPME OUTROS</fullName>
            </value>
            <value>
                <fullName>HUAWEI</fullName>
            </value>
            <value>
                <fullName>NEONATOLOGIA</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA MIS (US+RX)</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA PMLS</fullName>
            </value>
            <value>
                <fullName>VETERINÁRIA IVD</fullName>
            </value>
            <value>
                <fullName>CAMAS HOSPITALARES</fullName>
            </value>
            <value>
                <fullName>IMAGEM ULTRASSOM</fullName>
            </value>
            <value>
                <fullName>IMAGEM RAIO-X</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
            <value>
                <fullName>LOCAÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>