force-app/main/default/objects/Despesa__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <type>TextArea</type>
</CustomField>