force-app/main/default/objects/Despesa__c/fields/Nome_Colaborador__c.field-meta.xml
<CustomField>
    <fullName>Nome_Colaborador__c</fullName>
    <label>Nome Colaborador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>