force-app/main/default/objects/Despesa__c/fields/Status_despesa__c.field-meta.xml
<CustomField>
    <fullName>Status_despesa__c</fullName>
    <label>Status Despesa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APROVADA</fullName>
            </value>
            <value>
                <fullName>PENDENTE</fullName>
            </value>
            <value>
                <fullName>REPROVADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>