force-app/main/default/objects/Despesa__c/fields/Status_Viagem__c.field-meta.xml
<CustomField>
    <fullName>Status_Viagem__c</fullName>
    <label>Status Viagem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APROVACAO_FECHAMENTO</fullName>
            </value>
            <value>
                <fullName>CANCELADA</fullName>
            </value>
            <value>
                <fullName>CONFERENCIA</fullName>
            </value>
            <value>
                <fullName>FECHAMENTO</fullName>
            </value>
            <value>
                <fullName>FINALIZADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>