force-app/main/default/objects/Despesa__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Evento__c</columns>
    <columns>Linha_da_Despesa__c</columns>
    <columns>Status_despesa__c</columns>
    <columns>Tipo__c</columns>
    <columns>Valor__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>