force-app/main/default/objects/Despesa__c/listViews/Despesas_Servi_o.listView-meta.xml
<ListView>
    <fullName>Despesas_Servi_o</fullName>
    <columns>NAME</columns>
    <columns>Colaborador__c</columns>
    <columns>Departamento__c</columns>
    <columns>Evento__c</columns>
    <columns>CONNECTION_SENT.NAME</columns>
    <columns>Status_Viagem__c</columns>
    <columns>Status_despesa__c</columns>
    <columns>Valor__c</columns>
    <columns>Data__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departamento__c</field>
        <operation>equals</operation>
        <value>Serviços</value>
    </filters>
    <label>Despesas - Serviço</label>
</ListView>