force-app/main/default/objects/Despesa__c/listViews/Todas_as_cobran_as.listView-meta.xml
<ListView>
    <fullName>Todas_as_cobran_as</fullName>
    <columns>NAME</columns>
    <columns>Pedido__c</columns>
    <columns>Colaborador__c</columns>
    <columns>Departamento__c</columns>
    <columns>Evento__c</columns>
    <columns>CONNECTION_SENT.NAME</columns>
    <columns>Status_Viagem__c</columns>
    <columns>Status_despesa__c</columns>
    <columns>Valor__c</columns>
    <columns>Data__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas as Despesas</label>
</ListView>